--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,14 +1,43 @@
 server:
   servlet:
-    context-path: /api/v1
+    context-path: /api
+
+is:
+  base-url: http://localhost:10000/auth
+  realm: tui-pilotes
+  realm-url: ${is.base-url}/realms/${is.realm}
 
 spring:
   jpa:  
     show-sql: true
+  security:
+    oauth2:
+      resourceserver:
+        jwt:
+          jwk-set-uri: ${is.realm-url}/protocol/openid-connect/certs
+      client:
+        registration:
+          tui:
+            client-id: tui-gateway
+            client-secret: 8JNumTbP0pj8iYoCNgrycb3srA4jBHly
+            provider: keycloak
+            authorization-grant-type: authorization_code
+            scope: openid, profile
+            redirect-uri: "{baseUrl}/login/oauth2/code/{registrationId}"
+        provider:
+          keycloak:
+            authorization-uri: ${is.realm-url}/protocol/openid-connect/auth
+            jwk-set-uri: ${is.realm-url}/protocol/openid-connect/certs
+            user-info-uri: ${is.realm-url}/protocol/openid-connect/userinfo
+            token-uri: ${is.realm-url}/protocol/openid-connect/token
+            user-name-attribute: preferred_username
   main:
     orders: 
       orderable_quantity: 
       - 5
       - 10
       - 15
-      price: 1.33
+      price: "1.33"
+      closed_after_seconds: 300
+
+
