--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,6 +11,19 @@ x-is-envs: &IS_ENVS
 
 
 services:
+  proxy: 
+    image: nginx:1.21
+    volumes:
+      - ./volumes/nginx/templates:/etc/nginx/templates:ro
+    environment:
+      <<: *IS_ENVS
+      APP_PORT: 8081
+      APP_HOST: pilotes-app
+      APP_PROTOCOL: http
+      A: 3
+    ports:
+      - "10000:8080"
+
   identity-server:
     image: "quay.io/keycloak/keycloak:16.1.1"
     container_name: tui-identity-server
@@ -20,7 +33,7 @@ services:
       KEYCLOAK_USER: tui-admin
       KEYCLOAK_PASSWORD: tui-admin
     volumes:
-      - ./volumes/realm-export.json:/tmp/imports/realm-export.json:ro
+      - ./volumes/keycloak/realm-export.json:/tmp/imports/realm-export.json:ro
     ports:
       - "8080:8080"
   pilotes-app:
