--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -15,16 +15,17 @@ spring:
     rest:
       basePath: /
       detection-strategy: ANNOTATED
-  jpa:  
-    show-sql: true
+  jpa:
+    show-sql: false
+    open-in-view: false
   security:
     oauth2:
       resourceserver:
         jwt:
           jwk-set-uri: ${is.realm-url}/protocol/openid-connect/certs
   main:
-    orders: 
-      orderable_quantity: 
+    orders:
+      allowed_quantity:
       - 5
       - 10
       - 15
