--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,6 +2,8 @@ server:
   port: ${PORT:8081}
   servlet:
     context-path: /
+  error:
+    include-message: always
 
 is:
   base-url: ${IS_PROTOCOL:http}://${IS_HOST:localhost}:${IS_PORT:8080}/auth
