--- a/src/main/resources/META-INF/additional-spring-configuration-metadata.json
+++ b/src/main/resources/META-INF/additional-spring-configuration-metadata.json
@@ -28,6 +28,6 @@
     {
       "name": "spring.main.security.white-list",
       "type": "java.lang.String",
-      "description": "List of public endpoint"
+      "description": "List of public endpoint."
     }
   ] }
