--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -22,12 +22,12 @@ management:
 spring:
   application:
     name: tui-pilotes
-  mongodb:
-    embedded:
-      version: 2.6.10
+  r2dbc:
+    url: r2dbc:h2:mem:///pilotes
+    username: sa
+    password:
   jpa:
     show-sql: false
-    open-in-view: false
   security:
     oauth2:
       resourceserver:
