--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -32,7 +32,7 @@ on:
       - feature/docker
 
 env:
-  AWS_REGION: us-east-1                    # set this to your preferred AWS region, e.g. us-west-1
+  AWS_REGION: eu-central-1                    # set this to your preferred AWS region, e.g. us-west-1
   ECR_REPOSITORY: backend-technical-test-v2/pilotes-app           # set this to your Amazon ECR repository name
   ECS_SERVICE: MY_ECS_SERVICE                 # set this to your Amazon ECS service name
   ECS_CLUSTER: MY_ECS_CLUSTER                 # set this to your Amazon ECS cluster name
@@ -90,3 +90,4 @@ jobs:
         service: ${{ env.ECS_SERVICE }}
         cluster: ${{ env.ECS_CLUSTER }}
         wait-for-service-stability: true
+
